--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,165 @@ code {
   justify-content: center;
   align-items: center;
 }
+
+@keyframes slide {
+  0% {
+    transform: translateZ(320px);
+ }
+  100% {
+    transform: translateZ(640px);
+ }
+}
+@keyframes fadeIn {
+  0% {
+    transform: translateZ(-1280px) translateY(-150%);
+ }
+  100% {
+    transform: translateZ(-1280px) translateY(-20%);
+ }
+}
+@keyframes fadeIn2 {
+  0% {
+    transform: translateZ(-960px) translateY(-20%);
+ }
+  100% {
+    transform: translateZ(-960px) translateY(0);
+ }
+}
+.perspective {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  margin: -160px 0 0 -160px;
+  width: 320px;
+  height: 320px;
+  perspective: 320px;
+  transform-style: preserve-3d;
+}
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  animation: slide 12s linear infinite;
+  transform-style: preserve-3d;
+}
+.corridor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
+.corridor .img, .corridor .img-mirror {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 400%;
+  height: 400%;
+  background-size: 100% 100%;
+  transform: translateZ(-80px) scale(0.25);
+  transform-origin: 0 0;
+  backface-visibility: hidden;
+}
+.corridor .img-mirror {
+  transform: translateZ(-240px) scale(-0.25, 0.25) translateX(-100%);
+}
+.corridor:nth-child(1) {
+  z-index: 4;
+  transform: translateZ(0px);
+}
+.corridor:nth-child(2) {
+  z-index: 3;
+  transform: translateZ(-320px);
+}
+.corridor:nth-child(3) {
+  z-index: 2;
+  transform: translateZ(-640px);
+}
+.corridor:nth-child(4) {
+  z-index: 1;
+  transform: translateZ(-960px);
+}
+.corridor:nth-child(5) {
+  z-index: 0;
+  transform: translateZ(-1280px);
+}
+.corridor:nth-child(4) {
+  animation: fadeIn2 12s linear infinite;
+}
+.corridor:nth-child(4) div:nth-child(2) {
+  transform-style: preserve-3d;
+}
+.corridor:nth-child(4) div:nth-child(2)::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200%;
+  background: #fff;
+  transform: rotateX(90deg);
+  transform-origin: 0 0;
+}
+.corridor:last-child {
+  animation: fadeIn 12s linear infinite;
+}
+.corridor:last-child div:nth-child(2)::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200%;
+  background: #666;
+  transform: rotateX(90deg);
+  transform-origin: 0 0;
+}
+.corridor:last-child div:nth-child(2)::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200%;
+  background: #666;
+  transform: rotateX(-90deg);
+  transform-origin: 0 50%;
+}
+.corridor div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-origin: 0 0;
+  transform-style: preserve-3d;
+}
+.corridor div:nth-child(1), .corridor div:nth-child(3) {
+  background-image: linear-gradient(to bottom, #ccc, #666);
+}
+.corridor div:nth-child(1) {
+  transform: translateX(100%) scaleZ(1.01) rotateY(90deg);
+}
+.corridor div:nth-child(2) {
+  background: #b3b3b3;
+  box-shadow: inset 0 0 320px rgba(0, 0, 0, .5);
+  transform: translateY(100%) scaleZ(1.01) rotateX(270deg);
+}
+.corridor div:nth-child(3) {
+  transform: scaleZ(1.01) rotateY(90deg);
+}
+.corridor div:nth-child(4) {
+  background: #e6e6e6;
+  transform: rotateX(270deg) scaleY(1.01);
+}
+.corridor div:nth-child(4)::before {
+  position: absolute;
+  top: 80px;
+  left: 128px;
+  width: 64px;
+  height: 160px;
+  background: #fff;
+  box-shadow: 0 0 80px #fff;
+  transform: translateY(240px);
+}
